feat(admin): filter user status statistics
